<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="hello">Hello World, CBMainActivity!</string>
    <string name="app_name">mDistributor Indoscan Private Limited v1.16</string>
    <string name="user_name">User Name</string>
    <string name="sign_in">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="atch_db">Attach DB</string>
    <string name="password">Password</string>
    <string name="customer_image">Customer image</string>
    <string name="cb_logo">CB Logo Image</string>
    <string name="last_invoice">Last Invoice</string>
    <string name="telephone">Telephone</string>
    <string name="address">Address</string>
    <string name="invoice_number">Invoice No.</string>
    <string name="invoice_value">Invoice Value</string>
    <string name="target">Target</string>
    <string name="variance">Variance</string>
    <string name="remarks">Remarks</string>
    <string name="view_customer">View Customer</string>
    <string name="add_customer">Add Customer</string>
    <string name="rep_attendence">Rep Attendence</string>
    <string name="add_selected_to_itinerary">Add Selected to Itinerary</string>
    <string name="customer_name">Customer Name</string>
    <string name="area">Area</string>
    <string name="town">Town</string>
    <string name="district">District</string>
    <string name="fax">Fax</string>
    <string name="customer_status">Customer Status</string>
    <string name="email">Email</string>
    <string name="web">Web</string>
    <string name="br_no">BR No</string>
    <string name="owner_contact">Owner Contact</string>
    <string name="owner_wife_bday">Spouses\'s B\'day</string>
    <string name="pharmacist_name">Pharamcist Name</string>
    <string name="purchasing_officer">Purchasing Officer</string>
    <string name="no_of_staff">No. of Staff</string>
    <string name="save">Save</string>
    <string name="view_existing">View Existing</string>
    <string name="take_picture">Take Picture</string>
    <string name="add_extra_customer">Add Extra Customer</string>
    <string name="date">Date</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="pharmacy_reg_no">Pharmacy Registry no</string>
    <string name="select">Select</string>
    <string name="principle">Principle</string>
    <string name="total_rupees_colon">Total (Rs.):</string>
    <string name="batch">Batch</string>
    <string name="normal_qty">Normal Qty</string>
    <string name="image">Image</string>
    <string name="total_value">Total Value</string>
    <string name="settings">Settings</string>
    <string name="reason">Reason</string>
    <string name="return_product">Return Product</string>
    <string name="take_pic_info">Press image to go to gallery</string>
    <string name="preference">Preference</string>
    <string name="pharmacy_registration_no">Reg. No.</string>
    <string name="price_list">Price List</string>
    <string name="customer_name_colon">Customer Name:</string>
    <string name="gallery">Gallery</string>
    <string name="calendar">Calendar</string>
    <string name="save_shelf_qty">Save Shelf Qty</string>
    <string name="delete_returns">Delete returns</string>
    <string name="invoice_title">Invoice</string>
    <string name="generate_invoice">Generate Invoice</string>
    <string name="invoiced_items">Invoiced Items</string>
    <string name="product_code_colon">Pro. Code:</string>
    <string name="product_description">Pr. Desc.</string>
    <string name="request_qty">Request Qty</string>
    <string name="normal">Normal</string>
    <string name="free">Free</string>
    <string name="discount_colon">Discount:</string>
    <string name="discount">Discount</string>
    <string name="unit_price">Unit Price</string>
    <string name="total_qty_colon">Total Qty:</string>
    <string name="total_value_colon">Total Value:</string>
    <string name="current_stock_colon">Current Stock:</string>
    <string name="expiry_date_colon">Exp:</string>
    <string name="last_invoice_qty_colon">Last Inv Qty:</string>
    <string name="last_three_month_average_qty_colon">L3MA:</string>
    <string name="next">Next</string>
    <string name="selected_products">Selected Products</string>
    <string name="price_colon">Price:</string>
    <string name="batch_colon">Batch:</string>
    <string name="quantity_colon">Quantity:</string>
    <string name="free_colon">Free:</string>
    <string name="normal_colon">Normal:</string>
    <string name="shelf_quantity">Shelf Qty.</string>
    <string name="invoiced_product">Invoice Product</string>
    <string name="day_target_colon">Day Target:</string>
    <string name="invoice_value_colon">Invoice Value:</string>
    <string name="variance_colon">Variance:</string>
    <string name="variance_percentage_colon">Variance(%):</string>
    <string name="cash">Cash</string>
    <string name="cheque">Cheque</string>
    <string name="credit">Credit</string>
    <string name="remain">Remain</string>
    <string name="total">Total</string>
    <string name="market_return">Market Return</string>
    <string name="percentage">%</string>
    <string name="need_to_pay">Need To Pay</string>
    <string name="returns">Returns</string>
    <string name="competitor_products">Competitor Product</string>
    <string name="invoice_qty">Invoice Qty</string>
    <string name="discard">Discard</string>
    <string name="amount">Amount</string>
    <string name="invoice_no_colon">Invoice No:</string>
    <string name="invoice_gross">Invoice (Gross)  Rs.</string>
    <string name="net_invoice_amt">Net Inv. Amt.</string>
    <string name="net_ret_amt">Net Ret. Amt.</string>
    <string name="net_payable">Net Payable</string>
    <string name="return_gross">Return (Gross)</string>
    <string name="cheque_number">Cheque Number</string>
    <string name="collected_date">Collected Date</string>
    <string name="realize_date">Realize Date</string>
    <string name="cheque_amount">Cheque Amount</string>
    <string name="cheque_number_colon">Cheque Number:</string>
    <string name="collected_date_colon">Collected Date:</string>
    <string name="realize_date_colon">Realize Date:</string>
    <string name="cheque_amount_colon">Cheque Amount:</string>
    <string name="invoice_for">Invoice For</string>
    <string name="quantity">Quantity</string>
    <string name="total_items">Total Items</string>
    <string name="print">Print</string>
    <string name="total_quantity">Total Qty</string>
    <string name="category">Category</string>
    <string name="comment">Comment</string>
    <string name="initialize">Initial Setup…</string>
    <string name="device_id">Device ID</string>
    <string name="submit">Submit</string>
    <string name="loading">loading…</string>
    <string name="customer_name_starred">* Customer Name</string>
    <string name="address_starred">* Address</string>
    <string name="area_starred">* Zone</string>
    <string name="town_starred">* Town</string>
    <string name="district_starred">* District</string>
    <string name="telephone_starred">* Telephone</string>
    <string name="br_no_starred">* BR No</string>
    <string name="customer_status_starred">* Customer Status</string>
    <string name="Location">* Location</string>
    <string name="pharmacist_name_starred">* Owner\'s Name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="product">Product</string>
    <string name="clear_all">Clear All</string>
    <string name="syncronize">Syncronize</string>
    <string name="syncronize_products">Syncronize Products</string>
    <string name="syncronize_products_info">Update your tablet with the newest products available</string>
    <string name="syncronize_customers">Syncronize Customers</string>
    <string name="syncronize_customers_info">Udpdate all customer data on your tablet</string>
    <string name="syncronize_inventory">Syncronize Inventory</string>
    <string name="syncronize_inventory_info">Update your inventory</string>
    <string name="syncronize_itinerary">Syncronize Itinerary</string>
    <string name="syncronize_itinerary_info">Update your itinerary</string>
    <string name="upload_invoice">Upload Invoices</string>
    <string name="upload_invoices_info">Upload your invoices</string>
    <string name="upload_customers">Upload Customers</string>
    <string name="upload_customers_info">Upload all new customers</string>
    <string name="upload_returns">Upload Returns</string>
    <string name="upload_returns_info">Upload all sales returns</string>
    <string name="upload_shelf_quantity">Upload Shelf Quantities</string>
    <string name="upload_shelf_quantity_info">Upload the current stocks that the customers have</string>
    <string name="upload_invoice_outstanding">Upload Invoice Outstandings</string>
    <string name="upload_invoice_outstanding_info">Upload your invoice outstanding details</string>
    <string name="upload_product_unloads">Upload Product Unload Details</string>
    <string name="upload_product_unloads_info">Upload product unload details and check the status</string>
    <string name="enter_last_invoice">Enter last invoice number</string>
    <string name="enter_last_invoice_info">Enter the next invoice that you want to continue invoicing with</string>
    <string name="enter_last_customer">Enter last customer number</string>
    <string name="enter_last_customer_info">Enter the next customer number that you want to continue with</string>
    <string name="enable_return_without_history">Enable returns without history</string>
    <string name="enable_return_without_history_info">Enable returning products with no invoice history</string>
    <string name="enable_cheque_detail_entry">Cheque details</string>
    <string name="enable_cheque_detail_entry_info">Enable the user to enter cheque details</string>
    <string name="enable_extra_customer_add">Enable extra customers</string>
    <string name="enable_extra_customer_add_info">Enable extra customer add to current Itinerary</string>
    <string name="enable_pre_printed_invoice">Pre-Printed Invoice</string>
    <string name="enable_pre_printed_invoice_info">Enable Pre-Printed Invoice print format</string>
    <string name="enable_product_avg">Product Average</string>
    <string name="enable_product_avg_info">Auto-fill the product avg when invoicing</string>
    <string name="enter_the_number_of_days_for_back_up_info">Enter the number of days as the back up interval</string>
    <string name="enter_the_number_of_days_for_back_up">Number of days for backup</string>
    <string name="search_products">Search Products</string>
    <string name="export">Export</string>
    <string name="version_colon">Version:</string>
    <string name="version">Version</string>
    <string name="application_name_colon">Application Name:</string>
    <string name="application_name">Application Name</string>
    <string name="web_site_colon">Website:</string>
    <string name="emerge_web"><a href="http://www.mobitel.lk/">www.mobitel.lk</a></string>
    <string name="about">About</string>
    <string name="powered_by_colon">Powered By:</string>
    <string name="powered_by_emerge">Mobitel (Pvt) Ltd.</string>
    <string name="hotline_colon">Hotline:</string>
    <string name="emerge_hotline">(+94)711 717 171</string>
    <string name="unload_status">Unload Status</string>
    <string name="qty_colon">Qty:</string>
    <string name="date_colon">Date:</string>
    <string name="Dwonload_DEL_Outstanding">Download Outstanding</string>
    <string name="txt_Collection_Note">Dwonload collection note master data</string>
    <string name="Collection_Note">Collection Note</string>
    <string name="Upload_Collection_Note">Upload Collection Note</string>
    <string name="collection_note">Collection Note</string>
    <string name="help_string">Help</string>
</resources>