<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivChannelBridgeLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:contentDescription="@string/cb_logo"
            android:src="@drawable/cb_logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelApplicationName"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="@string/application_name_colon"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvApplicationName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/application_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelVersion"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="@string/version_colon"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelPoweredBy"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="@string/powered_by_colon"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPoweredBy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/powered_by_emerge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelWebSite"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="@string/web_site_colon"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvWebSite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/emerge_web" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelHotline"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="@string/hotline_colon"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvHotline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emerge_hotline" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="left|bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="right|bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivEmergeLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cb_logo"
                android:src="@drawable/emergelogo"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>