<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rgSearchOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/product" />

            <RadioButton
                android:id="@+id/rbPrinciple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/principle" />
        </RadioGroup>

        <AutoCompleteTextView
            android:id="@+id/etSearchProducts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:completionThreshold="1"
            android:ems="15"
            android:hint="@string/search_products" />

        <ImageButton
            android:id="@+id/ibClearSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/clear_all"
            android:src="@drawable/content_remove" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/lvProductList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bExport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export" />

        <Button
            android:id="@+id/bDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:text="@string/done" />
    </LinearLayout>

</LinearLayout>